Simplificados catalogos de productos en un solo archivo

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg  bg-primary navbar-custom" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-primary navbar-custom" data-bs-theme="dark">
     <div class="container">
         <a class="navbar-brand" href="../../Pages/Home/Home.html">
-            <img src="../../imagenes/iconos/logo.png" alt="Logo" class="logo-img">
+            <img src="../../imagenes/iconos/logo.png" alt="Logo" class="logo-img" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -12,12 +12,12 @@
                     <a class="nav-link" href="../../Pages/Categorias/Categorias.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../Productos/Ofertas.Html">Ofertas</a>
+                    <a class="nav-link" href="../Productos/Productos.html?Categoria=Ofertas">Ofertas</a>
                 </li>
             </ul>
-            <ul class="navbar-nav  navbar-shopping" >
+            <ul class="navbar-nav navbar-shopping">
                 <li class="nav-item">
-                    <img src="../../imagenes/iconos/shopping.png" class="shopping-img" alt="Shopping Icon">
+                    <img src="../../imagenes/iconos/shopping.png" class="shopping-img" alt="Shopping Icon" />
                     <a class="nav-link ver-compra text-black" href="../Carrito/Carrito.html">Ver compra</a>
                 </li>
             </ul>
