--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -42,7 +42,7 @@
             </div>
 
             <!-- banner ofertas -->
-            <div class="container" style="cursor: pointer" onclick="window.location.href='../Productos/Ofertas.Html'">
+            <div class="container" style="cursor: pointer" onclick="window.location.href='../Productos/Productos.html?Categoria=Ofertas'">
                 <div class="row">
                     <div class="col-12 text-center bannerOfertas py-1 fs-1 fw-bold">¡OFERTONES!</div>
                 </div>
