--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Productos/Productos.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Productos/Productos.html
@@ -13,12 +13,13 @@
     </head>
     <body>
         <div id="navbar-reutilizable"></div>
+
         <main>
             <div class="container">
                 <div class="row">
                     <div class="col-12 py-4 responsive-text d-flex">
-                        <a href="../Categorias/Categorias.html" class="text-primary text-decoration-none">Categorias</a>
-                        <p class="mb-0 mx-2">/ Gaseosas</p>
+                        <a href="../Categorias/Categorias.html" id="breadcrum-inicio" class="text-primary text-decoration-none">Categorías</a>
+                        <p class="mb-0 mx-2" id="breadcrum-final">/ Limpieza</p>
                     </div>
                 </div>
             </div>
@@ -27,6 +28,7 @@
             <script src="./CargaProductos.js"></script>
             <script src="../../Componentes/NavBarS.js" defer></script>
         </main>
+
         <div id="footer-reutilizable"></div>
     </body>
 </html>
