--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
@@ -28,7 +28,7 @@
             <div class="container mb-5">
                 <div class="row">
                     <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                        <a href="../Productos/Carnes.html" class="text-decoration-none d-flex">
+                        <a href="../Productos/Productos.html?Categoria=Carnes" class="text-decoration-none d-flex">
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
@@ -44,7 +44,7 @@
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                        <a href="../Productos/Gaseosas.html" class="text-decoration-none d-flex">
+                        <a href="../Productos/Productos.html?Categoria=Gaseosas" class="text-decoration-none d-flex">
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
@@ -62,7 +62,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                        <a href="../Productos/Lacteos.html" class="text-decoration-none d-flex">
+                        <a href="../Productos/Productos.html?Categoria=Lacteos" class="text-decoration-none d-flex">
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
@@ -78,7 +78,7 @@
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                        <a href="./../Productos/Limpieza.html" class="text-decoration-none d-flex">
+                        <a href="./../Productos/Productos.html?Categoria=Limpieza" class="text-decoration-none d-flex">
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
@@ -96,7 +96,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                        <a href="../Productos/Verduleria.html" class="text-decoration-none d-flex">
+                        <a href="../Productos/Productos.html?Categoria=Verduleria" class="text-decoration-none d-flex">
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
@@ -112,7 +112,7 @@
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                        <a href="../Productos/Vinos.html" class="text-decoration-none d-flex">
+                        <a href="../Productos/Productos.html?Categoria=Vinos" class="text-decoration-none d-flex">
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
