Navbar fijo en la parte superior de la pagina

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
@@ -32,7 +32,7 @@
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
-                                        <img src="../../imagenes/categorías/carnes.jpg" class="img-fluid rounded-5" alt="Imagen de Carne" />
+                                        <img src="../../imagenes/categorías/carnes.jpg" class="img-fluid rounded-5 border border-1 border-dark" alt="Imagen de Carne" />
                                     </div>
                                     <div class="col-md-8 d-flex align-items-center">
                                         <div class="card-body text-center">
@@ -48,7 +48,7 @@
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
-                                        <img src="../../imagenes/categorías/gaseosas.jpg" class="img-fluid rounded-5" alt="Imagen con botellas de Gaseosas" />
+                                        <img src="../../imagenes/categorías/gaseosas.jpg" class="img-fluid rounded-5 border border-1 border-dark" alt="Imagen con botellas de Gaseosas" />
                                     </div>
                                     <div class="col-md-8 d-flex align-items-center">
                                         <div class="card-body text-center">
@@ -66,7 +66,7 @@
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
-                                        <img src="../../imagenes/categorías/lacteos.jpg" class="img-fluid rounded-5" alt="Imagen con lácteos" />
+                                        <img src="../../imagenes/categorías/lacteos.jpg" class="img-fluid rounded-5 border border-1 border-dark" alt="Imagen con lácteos" />
                                     </div>
                                     <div class="col-md-8 d-flex align-items-center">
                                         <div class="card-body text-center">
@@ -82,7 +82,7 @@
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
-                                        <img src="../../imagenes/categorías/limpieza.jpg" class="img-fluid rounded-5" alt="Imagen con articulos de limpieza" />
+                                        <img src="../../imagenes/categorías/limpieza.jpg" class="img-fluid rounded-5 border border-1 border-dark" alt="Imagen con articulos de limpieza" />
                                     </div>
                                     <div class="col-md-8 d-flex align-items-center">
                                         <div class="card-body text-center">
@@ -100,7 +100,7 @@
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
-                                        <img src="../../imagenes/categorías/verduleria.jpg" class="img-fluid rounded-5" alt="Imagen de frutas y verduras" />
+                                        <img src="../../imagenes/categorías/verduleria.jpg" class="img-fluid rounded-5 border border-1 border-dark" alt="Imagen de frutas y verduras" />
                                     </div>
                                     <div class="col-md-8 d-flex align-items-center">
                                         <div class="card-body text-center">
@@ -116,7 +116,7 @@
                             <div class="card rounded-5 bg-secondary p-3 border border-dark">
                                 <div class="row">
                                     <div class="col-md-4 separador responsive-border">
-                                        <img src="../../imagenes/categorías/vinos.jpg" class="img-fluid rounded-5" alt="Imagen de botellas de vinos" />
+                                        <img src="../../imagenes/categorías/vinos.jpg" class="img-fluid rounded-5 border border-1 border-dark" alt="Imagen de botellas de vinos" />
                                     </div>
                                     <div class="col-md-8 d-flex align-items-center">
                                         <div class="card-body text-center">
