--- a/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg bg-primary navbar-custom" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-primary navbar-custom fixed-top" id="header" data-bs-theme="dark">
     <div class="container">
         <a class="navbar-brand" href="../../Pages/Home/Home.html">
-            <img src="../../imagenes/iconos/logo.png" alt="Logo" class="logo-img" />
+            <img src="../../imagenes/iconos/logo.png" alt="Home" class="logo-img" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -9,16 +9,16 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="../../Pages/Categorias/Categorias.html">Productos</a>
+                    <a class="nav-link fs-5 text-light" href="../../Pages/Categorias/Categorias.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../Productos/Productos.html?Categoria=Ofertas">Ofertas</a>
+                    <a class="nav-link fs-5 text-light" href="../Productos/Productos.html?Categoria=Ofertas">Ofertas</a>
                 </li>
             </ul>
-            <ul class="navbar-nav navbar-shopping">
+            <ul class="navbar-nav navbar-shopping" style="cursor: pointer" onclick="window.location.href='../Carrito/Carrito.html'">
                 <li class="nav-item">
-                    <img src="../../imagenes/iconos/shopping.png" class="shopping-img" alt="Shopping Icon" />
-                    <a class="nav-link ver-compra text-black" href="../Carrito/Carrito.html">Ver compra</a>
+                    <img src="../../imagenes/iconos/shopping.png" class="shopping-img" />
+                    <span class="nav-link text-black">Ver compra</span>
                 </li>
             </ul>
         </div>
