Actualizo Menú de tps

--- a/Bootcamp_Full-Stack/index.html
+++ b/Bootcamp_Full-Stack/index.html
@@ -25,12 +25,12 @@
                     </button>
                     <ul class="list-group collapse" id="contacto">
                         <li class="list-group-item">
-                            <a href="https://www.linkedin.com/in/ulises-mb/" target="_blank" class="d-block">
+                            <a href="https://www.linkedin.com/in/ulises-mb/" target="_blank" class="d-block text-decoration-none">
                                 <i class="bi bi-linkedin"></i> LinkedIn
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="https://github.com/Ulimb" target="_blank" class="d-block">
+                            <a href="https://github.com/Ulimb" target="_blank" class="d-block text-decoration-none">
                                 <i class="bi bi-github"></i> GitHub
                             </a>
                         </li>
@@ -115,22 +115,22 @@
                     </button>
                     <ul class="list-group collapse" id="Integrantes">
                         <li class="list-group-item">
-                            <a href="https://github.com/23carlosg" target="_blank" class="d-block">
+                            <a href="https://github.com/23carlosg" target="_blank" class="d-block text-decoration-none">
                                 <i class="bi bi-github"></i> Carlos Gauto
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="https://github.com/cesarl94" target="_blank" class="d-block">
+                            <a href="https://github.com/cesarl94" target="_blank" class="d-block text-decoration-none">
                                 <i class="bi bi-github"></i> César Lorenzon
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="https://github.com/TournierSebastian" target="_blank" class="d-block">
+                            <a href="https://github.com/TournierSebastian" target="_blank" class="d-block text-decoration-none">
                                 <i class="bi bi-github"></i> Sebastián Tournier
                             </a>
                         </li>
                         <li class="list-group-item">
-                            <a href="https://github.com/Ulimb" target="_blank" class="d-block">
+                            <a href="https://github.com/Ulimb" target="_blank" class="d-block text-decoration-none">
                                 <i class="bi bi-github"></i> Ulises Mijael Ben
                             </a>
                         </li>
@@ -140,11 +140,13 @@
                 <!-- Semana 6 -->
                 <li class="list-group-item">
                     <button class="btn btn-outline-primary w-100 text-start" data-bs-toggle="collapse" data-bs-target="#semana6" aria-expanded="false" aria-controls="semana6">
-                        Semana 6 <i class="bi bi-chevron-down"></i>
+                        Semana 6 / semana 7 <i class="bi bi-chevron-down"></i>
                     </button>
                     <ul class="list-group collapse" id="semana6">
                         <li class="list-group-item"><a href="./semana-6/Enunciado.txt" target="_blank">Enunciado</a></li>
-                        <li class="list-group-item"><a href="./semana-6/proyecto/Pages/Home/Home.html" target="_blank">TP - Desarrollo del sitio web de un Supermercado</a></li>
+                        <li class="list-group-item"><a href="./semana-6/proyecto/Pages/Home/Home.html" target="_blank">Tienda online - Desarrollo sitio web Supermercado</a></li>
+                        <li class="list-group-item"><a href="./semana-6/Documento Diseño - Tienda (Cilsa).pdf" target="_blank">Tienda online - Documento Diseño</a></li>
+                        <li class="list-group-item"><a href="./semana-6/Figma - Tienda (Cilsa).pdf" target="_blank">Tienda online - Figma</a></li>
                         <!-- <li class="list-group-item"><a href="./semana-6 copy/proyecto/Pages/Home/Home.html" target="_blank">Prueba</a></li> -->
                     </ul>
                 </li>
